--- a/README.Rmd
+++ b/README.Rmd
@@ -24,6 +24,12 @@ knitr::opts_chunk$set(
 
 ## Installation
 
+You can install sparktf from CRAN with:
+
+``` r
+install.packages("sparktf")
+```
+
 You can install the development version of sparktf from GitHub with:
 
 ``` r
